Bug 378607 - virtio devices not found (vda)
Summary: virtio devices not found (vda)
Status: RESOLVED FIXED
Alias: None
Product: partitionmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Andrius Štikonas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-10 05:40 UTC by Jerrod Frost
Modified: 2017-06-28 11:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: kpmcore 3.2.0
Sentry Crash Report:


Attachments
screenshot (136.20 KB, image/png)
2017-06-20 12:49 UTC, Harald Sitter
Details
lsblk -a output (373 bytes, text/plain)
2017-06-21 08:44 UTC, Harald Sitter
Details
lsblk -a -O output (4.29 KB, text/plain)
2017-06-21 08:45 UTC, Harald Sitter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jerrod Frost 2017-04-10 05:40:24 UTC
(KVM/QEMU) Virtio devices are not recognized. I tried to partition a virtual machine and noticed calamares and partitionmanager could not see/recognize vda. virtio disks have advantages for virtual machines that emulating sata does not. This is a must.
Comment 1 Andrius Štikonas 2017-04-10 09:20:32 UTC
Virtio support was implemented recently. It is just not released. But you can always grab kpmcore git master. It doesn't have that many changes and should be stable (might need recompilation of calamares and partitionmanager although, I'm not 100% sure. It might just work).
Comment 2 Harald Sitter 2017-06-20 12:48:38 UTC
I do not think this is working TBH. I am trying neon unstable which has master builds of kpmcore and partitionmanager, yet the virtio device does not show up.

To reproduce with virt-manager:
- create new VM
- use neon unstable as seed ISO
- create new disk
- customize config before install
- on IDE Disk 1 switch the advanaced setting for the disk bus from IDE to VirtIO
- apply and begin install
- try to install with calamares -> no devices
- `pkcon install partitionmanager` -> no devices
- `parted; print all` -> lists virtio as expected
Comment 3 Harald Sitter 2017-06-20 12:49:14 UTC
Created attachment 106187 [details]
screenshot
Comment 4 Andrius Štikonas 2017-06-20 14:09:03 UTC
Hmm, I was told virtio major device number is 253. But when I'm trying here locally I see 252. What does lsblk report to you?
Comment 5 Andrius Štikonas 2017-06-20 14:20:57 UTC
Looks like virtio can use various device numbers often in the range 240-254

(https://lkml.org/lkml/2016/3/2/930)

In principle I can add the whole range to whitelist. Any better solutions?
Comment 6 Andrius Štikonas 2017-06-20 14:51:57 UTC
Git commit fda1e219de430d1301839e277666690e108b12c4 by Andrius Štikonas.
Committed on 20/06/2017 at 14:51.
Pushed by stikonas into branch 'master'.

Add more major device numbers for virtio.

M  +1    -1    src/plugins/libparted/libpartedbackend.cpp

https://commits.kde.org/kpmcore/fda1e219de430d1301839e277666690e108b12c4
Comment 7 Andrius Štikonas 2017-06-20 20:42:32 UTC
Looks like it might be possible to improve device detection by looking at lsblk's TYPE column and check for "disk". Then we can avoid using major numbers entirely.

I'll try to do this later but Calamares should already work after tonight when kpmcore will be rebuilt.
Comment 8 Harald Sitter 2017-06-21 08:43:54 UTC
Works like a charm with new master build. Thanks!
Comment 9 Harald Sitter 2017-06-21 08:44:39 UTC
Created attachment 106209 [details]
lsblk -a output

I am also attaching lsblk output for reference
Comment 10 Harald Sitter 2017-06-21 08:45:01 UTC
Created attachment 106210 [details]
lsblk -a -O output
Comment 11 Andrius Štikonas 2017-06-21 11:08:00 UTC
Ok, thanks for lsblk. So far it still looks like TYPE=disk might work much simpler. Loop devices seems to have different TYPE as well, so they won't appear in calamares. But anyway, this is not too urgent. Can probably just go into next feature release.
Comment 12 Andrius Štikonas 2017-06-22 02:13:19 UTC
Git commit a35702e9113d655ffcc4b2ffc06e791f256d0beb by Andrius Štikonas.
Committed on 22/06/2017 at 02:11.
Pushed by stikonas into branch 'master'.

Use lsblk's TYPE=disk when scanning for devices.

The previous way relied on kernel device numbers but this gets ugly, especially
in cases when device number is not assigned such as virtio disks.

M  +2    -2    src/backend/corebackend.cpp
M  +16   -19   src/plugins/libparted/libpartedbackend.cpp

https://commits.kde.org/kpmcore/a35702e9113d655ffcc4b2ffc06e791f256d0beb
Comment 13 Harald Sitter 2017-06-28 11:51:36 UTC
Git commit 984a4e9acee45dca1aa5bcc69294b536930a20c2 by Harald Sitter.
Committed on 28/06/2017 at 11:51.
Pushed by sitter into branch 'master'.

fix device RO check

Summary:
- mark deviceNode const
- copy it as deviceName
- mutate deviceName by removing `/dev/`
- use the new deviceName for the read-only check

this makes sure we emit the unmodified deviceNode (e.g. /dev/vda) rather
than the name (e.g. vda). unbreaks for example calamares which doesn't
know what to do with "vda".

Test Plan:
- without fix clamares fails to list devices
- with the fix calamares lists devices

Reviewers: stikonas

Reviewed By: stikonas

Differential Revision: https://phabricator.kde.org/D6414

M  +4    -2    src/plugins/libparted/libpartedbackend.cpp

https://commits.kde.org/kpmcore/984a4e9acee45dca1aa5bcc69294b536930a20c2