Use lsblk's TYPE=disk when scanning for devices.

The previous way relied on kernel device numbers but this gets ugly, especially
in cases when device number is not assigned such as virtio disks.

BUG: 378607